# lfjson

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/examples/: bool_array.json
bench/lfjson/: CMakeLists.txt  bench_deserialize.h  bench_memory.h  bench_serialize.h  bench_utils.h  benchmark_main.cpp
lib/rapidjson-1.1.0/include/rapidjson/: allocators.h  document.h
lib/rapidjson-1.1.0/include/rapidjson/internal/: stack.h
src/lfjson/: BaseData.h  DataHelper.h  Document.h  HeapAllocator.h  JString.h  PoolAllocator.h  StackAllocator.h  StringPool.h  Utils.h  lfjson.h
test/: CMakeLists.txt  test_lfjson_main.cpp
